--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
